1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Default to 1998-08-17.
	Include Makefile.appl from $(SWARMHOME)/etc/swarm.

1998-04-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* FoodSpace.h: Include space/Discrete2d.h instead of space.h.

	* Bug.h (Bug), ModelSwarm.h (ModelSwarm): Make world an object
	that conforms to the Grid2d protocol.

1998-03-18  Alex Lancaster  <alex@santafe.edu>

	* ModelSwarm.m: Import <simtools.h>.

	* ModelSwarm.[hm]: Moved import of <activity.h> into ModelSwarm.m

	* FoodSpace.h: Removed irrelevant import of <simtools.h>. Minor
	reformat

1998-02-28  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ModelSwarm.m: Don't include simtools.h and collections.h.
	Include random.h.  Reformatting throughout.

	* Bug.m, FoodSpace.m: Include random.h instead of simtools.h.
	Reformatting throughout.

1998-02-23  Alex Lancaster  <alex@santafe.edu>

	* ModelSwarm.m ([ModelSwarm -build{Objects,Actions}]): Changed
	storage calls allocation to use the current Swarm (self) as the
	basis for storage allocation, rather than an explicit ([self
	-getZone]) call.

1998-02-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* ModelSwarm.h, Bug.h: Include from objectbase/ instead of
	swarmobject/.

1998-01-27  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* main.m (main): Constify argv.

1997-12-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile (SWARMHOME): Don't define if defined already.
