@@ -1,7 +1,14 @@
+1998-08-20  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
+
+	* Makefile (APPLIBS): Remove.
+	(SWARMHOME): Default to 1998-08-20.
+
+	* ModelSwarm.m ([ModelSwarm -buildObjects]): Use ObjectLoader's
+	fromAppDataFileNamed: instead of fromFileNamed:.
+
 1998-08-17  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
-	* Makefile (SWARMHOME): Default to 1998-08-17.
-	Include Makefile.appl from $(SWARMHOME)/etc/swarm.
+	* Makefile: Include Makefile.appl from $(SWARMHOME)/etc/swarm.
 
 1998-04-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>
 
